<resources>
    <string name="app_name">CALCULATOR</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_0_">0</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="divide">/</string>
    <string name="equal">=</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="plus">+</string>
    <string name="_0_1">0</string>
    <string name="_11">1</string>
    <string name="_22">2</string>
    <string name="_33">3</string>
    <string name="_55">5</string>
    <string name="_44">4</string>
    <string name="_77">7</string>
    <string name="star">*</string>
</resources>